<resources>
    <string name="app_name">LoginDemo</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">&#032;登录&#032;</string>
    <string name="sign_up">&#032;注册&#032;</string>
    <string name="login_by_phone_number">手机号登录</string>
    <string name="country_or_region">国家/地区</string>
    <string name="china_mainland">中国大陆(+86)</string>
    <string name="mobile_number">手机号</string>
    <string name="enter_phone_number">请填写手机号</string>
    <string name="login_tip">上述手机号仅用于登录验证</string>
    <string name="agree_and_continue">同意并继续</string>
    <string name="continue1">继续</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_wechat_home">微信</string>
    <string name="title_address_book">通讯录</string>
    <string name="title_find">发现</string>
    <string name="title_profile">我</string>
    <string name="enter_password">请输入密码</string>
    <string name="password">密码</string>
    <string name="signup_new_account">注册新账号</string>
    <string name="gender">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
</resources>