<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--填充空白-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <!--标题“手机号登录”-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_by_phone_number"
            android:textAlignment="center"
            android:textSize="50sp" />

        <!--国家/地区输入框-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@+id/location_input"
                android:text="@string/country_or_region"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/location_input"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:width="100dp"
                android:inputType="text"
                android:text="@string/china_mainland"
                android:textColor="@color/black"
                android:textSize="27sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <!--手机号输入框-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@+id/phone_input"
                android:text="@string/phone_number"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/phone_input"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:width="100dp"
                android:hint="@string/enter_phone_number"
                android:inputType="phone"
                android:textColor="@android:color/darker_gray"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <!--填充空白-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_tip"
            android:textAlignment="center" />

        <!--登录按钮-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#04BE02"
                android:text="@string/agree_and_continue" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>